# caredx2024_rapid_prototyping

./: README.md  pyproject.toml
notebooks/: care_pulp.ipynb  simple_tsp.ipynb  test_case.ipynb
src/caredx2024_rapid_prototyping/: __init__.py  app.py
