[project]
name = "caredx2024-rapid-prototyping"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "haganelego", email = "hagane01061998@icloud.com" }
]
dependencies = [
    "pulp>=2.9.0",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "jupyterlab>=4.2.5",
    "ortools>=9.10.4067",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/caredx2024_rapid_prototyping"]
