[project]
name = "caredx2024-rapid-prototyping"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "haganelego", email = "hagane01061998@icloud.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.5",
    "tqdm>=4.66.5",
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "pygad>=3.3.1",
    "isort>=5.13.2",
    "black>=24.8.0",
    "nbqa>=1.9.0",
    "pulp>=2.9.0",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "jupyterlab>=4.2.5",
    "ortools>=9.10.4067",
    "gradio>=4.42.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/caredx2024_rapid_prototyping"]
